alt text fixed, extra spacing for icon element

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -44,8 +44,7 @@ img {
   .icon {
       height: 100px;
       width: auto;
-      margin-left: auto;
-      margin-right: auto;
+      margin: 40px auto;
 
   }
 
